--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "instasphere-backend",
+  "version": "1.0.0",
+  "description": "Backend for InstaSphere social media app",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
